# ratinhos-public

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/modules/: mod.rs
src/modules/ip/dns/: v4.rs  v6.rs
src/modules/ip/http/: mod.rs  v4.rs  v6.rs
src/outputs/: console.rs  mod.rs
src/outputs/discord/: mod.rs  webhook.rs
