[package]
name = "ratinhos"
version = "0.0.1"
edition = "2021"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "io-util", "io-std", "net"]

[dependencies.reqwest]
version = "0"
features = ["json"]

[dependencies]
rustdns = "0.4.0"
serde_json = "1"
tokio-async-drop = "0"
